fix align

--- a/src/components/converter/converter.scss
+++ b/src/components/converter/converter.scss
@@ -40,6 +40,7 @@
     @include for-large-up {
       display: flex;
       align-items: end;
+      justify-content: center;
       width: 38vw;
     }
   }
